@@ -9,6 +9,10 @@ Enter will spawn player
 WASD, arrows moves him
 Space - jumps
 
+day93:
+ linear texture filtering:
+ sub pixel drawing: taking samples from 4 closest pixels and blending between them
+
 day90-91:
  coordination explanation
  basis translation: new_vector = new_origin + a_x * new_y_axis + a_y * new_y_axis
